# snowloader

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: adapters.rst  advanced.rst  api.rst  async.rst  attachments.rst  authentication.rst  changelog.rst  concurrent.rst  conf.py  configuration.rst  getting-started.rst  index.rst  loaders.rst  roadmap.rst  servicenow_api.md
examples/: 01_basic_incidents.py  02_langchain_rag.py  03_llamaindex_rag.py  04_delta_sync.py  05_cmdb_graph.py
integrations/langchain-docs/: snowloader.ipynb
integrations/llama-index-readers-snowloader/: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
integrations/llama-index-readers-snowloader/.github/workflows/: publish.yml
integrations/llama-index-readers-snowloader/llama_index/readers/: __init__.py
integrations/llama-index-readers-snowloader/llama_index/readers/snowloader/: __init__.py  base.py
integrations/llama-index-readers-snowloader/tests/: test_readers_snowloader.py
scripts/: build_assets.py
src/snowloader/: __init__.py  async_connection.py  async_models.py  connection.py  models.py
src/snowloader/adapters/: __init__.py  langchain.py  llamaindex.py
src/snowloader/loaders/: __init__.py  _field_utils.py  attachments.py  catalog.py  changes.py  cmdb.py  incidents.py  knowledge_base.py  problems.py
src/snowloader/utils/: __init__.py  html_cleaner.py  parsing.py
tests/: __init__.py
tests/integration/: __init__.py  test_live.py
tests/unit/: __init__.py  test_async_connection.py  test_async_loaders.py  test_attachments.py  test_catalog.py  test_changes.py  test_cmdb.py  test_concurrent_get_records.py  test_connection.py  test_field_utils.py  test_html_cleaner.py  test_incidents.py  test_kb.py  test_langchain_adapter.py  test_llamaindex_adapter.py  test_models.py  test_problems.py  test_smoke_e2e.py
