[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snowloader"
version = "0.1.2"
description = "Comprehensive ServiceNow data loader for AI/LLM pipelines — Incidents, CMDB, KB, Changes, Catalog & more. Works with LangChain & LlamaIndex."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Roni Das", email = "roni@totaltechnologyzone.com"},
]
keywords = [
    "servicenow", "langchain", "llamaindex", "rag", "llm",
    "document-loader", "itsm", "cmdb", "incidents", "ai",
    "data-loader", "knowledge-base", "agentic-ai", "vector-database",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.11.0"]
all = [
    "langchain-core>=0.2.0",
    "llama-index-core>=0.11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "types-requests>=2.28.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.0",
    "sphinx-copybutton>=0.5.0",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-inline-tabs>=2023.4.0",
    "myst-parser>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ronidas39/snowloader"
Documentation = "https://snowloader.readthedocs.io"
Repository = "https://github.com/ronidas39/snowloader"
Issues = "https://github.com/ronidas39/snowloader/issues"
Changelog = "https://github.com/ronidas39/snowloader/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/snowloader"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "W"]

[tool.ruff.lint.isort]
known-first-party = ["snowloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring live ServiceNow instance",
]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["snowloader"]
mypy_path = "src"

[tool.coverage.run]
source = ["snowloader"]

[tool.coverage.report]
show_missing = true
fail_under = 80
